// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home snapshot matches post-submit user 1`] = `
<DocumentFragment>
  <div
    class="oec-loading-wrapper"
  >
    <div
      aria-hidden="true"
      class="opacity-0"
    >
      <div
        class="Home grid-container margin-top-4"
      >
        <div
          class="grid-row grid-gap"
        >
          <div
            class="tablet:grid-col-8 margin-top-4"
          >
            <h1
              class="margin-top-0"
            >
              Hello Voldy!
            </h1>
            <p>
              ECE Reporter will allow you to share your state-funded enrollment data with the Office of Early Childhood (OEC). Make sure the site names and funding spaces below are accurate before you start entering data.
            </p>
            <h2
              class="pre-submit-h2"
            >
              Your managed sites and funding spaces
            </h2>
          </div>
          <div
            class="tablet:grid-col-4 margin-top-4 img"
            role="presentation"
          >
            <svg>
              PersonWithSpreadsheet.svg
            </svg>
          </div>
        </div>
        <div
          class="usa-alert usa-alert--info grid-row"
        >
          <div
            class="display-flex flex-fill"
          >
            <div
              class="usa-alert__body grid-col flex-fill"
            >
              <p
                class="usa-alert__text"
              >
                <span>
                  Are your sites and/or funding spaces incorrect? Reach out to the ECE Reporter team through 
                  <a
                    href="/revision"
                  >
                    this form.
                  </a>
                </span>
              </p>
            </div>
            <div
              class="usa-alert__body flex-auto display-flex flex-align-center"
            />
          </div>
        </div>
        <h2
          class="pre-submit-h2"
        >
          How to use ECE Reporter
        </h2>
        <p>
          These instructions guide you through the file upload process to add many records at once. If you'd like to add records manually, 
          <a
            href="/roster/"
          >
             you can add them on your roster
          </a>
          .
        </p>
        <ol
          class="how-to-list"
        >
          <li
            class="how-to-step"
          >
            <h3
              class="how-to-header"
            >
              Review the data requirements
            </h3>
            <p
              class="how-to-body"
            >
              Learn more about the data elements ECE Reporter collects for each enrollment.
            </p>
            <p
              class="how-to-button"
            >
              <a
                class="usa-button usa-button--unstyled"
                href="/data-requirements/"
              >
                <span
                  class="oec-text-with-icon"
                >
                  See required data
                  <svg
                    class="oec-text-with-icon__icon oec-text-with-icon__icon--direction-right oec-text-with-icon__icon--side-right"
                  >
                    arrowRight.svg
                  </svg>
                </span>
              </a>
            </p>
          </li>
          <li
            class="how-to-step"
          >
            <h3
              class="how-to-header"
            >
              Download the data template
            </h3>
            <p
              class="how-to-body"
            >
              You'll need to enter data in this file to upload in ECE Reporter.
            </p>
            <p
              class="how-to-button"
            >
              <a
                class="usa-button usa-button--unstyled"
                href="/template/"
              >
                <span
                  class="oec-text-with-icon"
                >
                  Download the template
                  <svg
                    class="oec-text-with-icon__icon oec-text-with-icon__icon--direction-right oec-text-with-icon__icon--side-right"
                  >
                    arrowRight.svg
                  </svg>
                </span>
              </a>
            </p>
          </li>
          <li
            class="how-to-step"
          >
            <h3
              class="how-to-header"
            >
              Prepare your data
            </h3>
            <p
              class="how-to-body"
            >
              Get instructions on how to enter data into OEC's template.
            </p>
            <p
              class="how-to-button"
            >
              <a
                class="usa-button usa-button--unstyled"
                href="https://help.ece-reporter.ctoec.org/prepare-your-data/"
              >
                <span
                  class="oec-text-with-icon"
                >
                  See the how-to guide
                  <svg
                    class="oec-text-with-icon__icon oec-text-with-icon__icon--direction-right oec-text-with-icon__icon--side-right"
                  >
                    arrowRight.svg
                  </svg>
                </span>
              </a>
            </p>
          </li>
          <li
            class="how-to-step"
          >
            <h3
              class="how-to-header"
            >
              Upload your data
            </h3>
            <p
              class="how-to-body"
            >
              Once your template is filled out, you'll upload the data to ECE Reporter.
            </p>
            <p
              class="how-to-button"
            >
              <a
                class="usa-button usa-button--unstyled"
                href="/upload/"
              >
                <span
                  class="oec-text-with-icon"
                >
                  Go to file upload
                  <svg
                    class="oec-text-with-icon__icon oec-text-with-icon__icon--direction-right oec-text-with-icon__icon--side-right"
                  >
                    arrowRight.svg
                  </svg>
                </span>
              </a>
            </p>
          </li>
        </ol>
      </div>
    </div>
    <div
      class="oec-loading-wrapper__indicator bg-white"
    >
      <div
        class="MuiCircularProgress-root indeterminate MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
        role="progressbar"
        style="width: 40px; height: 40px;"
      >
        <svg
          class="MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
            cx="44"
            cy="44"
            fill="none"
            r="20.2"
            stroke-width="3.6"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Home snapshot matches pre-submit user 1`] = `
<DocumentFragment>
  <div
    class="oec-loading-wrapper"
  >
    <div
      aria-hidden="false"
      class=""
    >
      <div
        class="Home grid-container margin-top-4"
      >
        <div
          class="grid-row grid-gap"
        >
          <div
            class="tablet:grid-col-8 margin-top-4"
          >
            <h1
              class="margin-top-0"
            >
              Hello Voldy!
            </h1>
            <p>
              ECE Reporter will allow you to share your state-funded enrollment data with the Office of Early Childhood (OEC). Make sure the site names and funding spaces below are accurate before you start entering data.
            </p>
            <h2
              class="pre-submit-h2"
            >
              Your managed sites and funding spaces
            </h2>
          </div>
          <div
            class="tablet:grid-col-4 margin-top-4 img"
            role="presentation"
          >
            <svg>
              PersonWithSpreadsheet.svg
            </svg>
          </div>
        </div>
        <div
          class="usa-alert usa-alert--info grid-row"
        >
          <div
            class="display-flex flex-fill"
          >
            <div
              class="usa-alert__body grid-col flex-fill"
            >
              <p
                class="usa-alert__text"
              >
                <span>
                  Are your sites and/or funding spaces incorrect? Reach out to the ECE Reporter team through 
                  <a
                    href="/revision"
                  >
                    this form.
                  </a>
                </span>
              </p>
            </div>
            <div
              class="usa-alert__body flex-auto display-flex flex-align-center"
            />
          </div>
        </div>
        <h2
          class="pre-submit-h2"
        >
          How to use ECE Reporter
        </h2>
        <p>
          These instructions guide you through the file upload process to add many records at once. If you'd like to add records manually, 
          <a
            href="/roster/"
          >
             you can add them on your roster
          </a>
          .
        </p>
        <ol
          class="how-to-list"
        >
          <li
            class="how-to-step"
          >
            <h3
              class="how-to-header"
            >
              Review the data requirements
            </h3>
            <p
              class="how-to-body"
            >
              Learn more about the data elements ECE Reporter collects for each enrollment.
            </p>
            <p
              class="how-to-button"
            >
              <a
                class="usa-button usa-button--unstyled"
                href="/data-requirements/"
              >
                <span
                  class="oec-text-with-icon"
                >
                  See required data
                  <svg
                    class="oec-text-with-icon__icon oec-text-with-icon__icon--direction-right oec-text-with-icon__icon--side-right"
                  >
                    arrowRight.svg
                  </svg>
                </span>
              </a>
            </p>
          </li>
          <li
            class="how-to-step"
          >
            <h3
              class="how-to-header"
            >
              Download the data template
            </h3>
            <p
              class="how-to-body"
            >
              You'll need to enter data in this file to upload in ECE Reporter.
            </p>
            <p
              class="how-to-button"
            >
              <a
                class="usa-button usa-button--unstyled"
                href="/template/"
              >
                <span
                  class="oec-text-with-icon"
                >
                  Download the template
                  <svg
                    class="oec-text-with-icon__icon oec-text-with-icon__icon--direction-right oec-text-with-icon__icon--side-right"
                  >
                    arrowRight.svg
                  </svg>
                </span>
              </a>
            </p>
          </li>
          <li
            class="how-to-step"
          >
            <h3
              class="how-to-header"
            >
              Prepare your data
            </h3>
            <p
              class="how-to-body"
            >
              Get instructions on how to enter data into OEC's template.
            </p>
            <p
              class="how-to-button"
            >
              <a
                class="usa-button usa-button--unstyled"
                href="https://help.ece-reporter.ctoec.org/prepare-your-data/"
              >
                <span
                  class="oec-text-with-icon"
                >
                  See the how-to guide
                  <svg
                    class="oec-text-with-icon__icon oec-text-with-icon__icon--direction-right oec-text-with-icon__icon--side-right"
                  >
                    arrowRight.svg
                  </svg>
                </span>
              </a>
            </p>
          </li>
          <li
            class="how-to-step"
          >
            <h3
              class="how-to-header"
            >
              Upload your data
            </h3>
            <p
              class="how-to-body"
            >
              Once your template is filled out, you'll upload the data to ECE Reporter.
            </p>
            <p
              class="how-to-button"
            >
              <a
                class="usa-button usa-button--unstyled"
                href="/upload/"
              >
                <span
                  class="oec-text-with-icon"
                >
                  Go to file upload
                  <svg
                    class="oec-text-with-icon__icon oec-text-with-icon__icon--direction-right oec-text-with-icon__icon--side-right"
                  >
                    arrowRight.svg
                  </svg>
                </span>
              </a>
            </p>
          </li>
        </ol>
      </div>
    </div>
    <div
      class="oec-loading-wrapper__indicator bg-white"
      hidden=""
    >
      <div
        class="MuiCircularProgress-root indeterminate MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
        role="progressbar"
        style="width: 40px; height: 40px;"
      >
        <svg
          class="MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
            cx="44"
            cy="44"
            fill="none"
            r="20.2"
            stroke-width="3.6"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Home snapshot matches revise site request form 1`] = `
<DocumentFragment>
  <div
    class="grid-container margin-top-4"
  >
    <button
      class="usa-button usa-button--unstyled margin-top-2 text-bold"
      type="button"
    >
      <span
        class="oec-text-with-icon"
      >
        <svg
          class="oec-text-with-icon__icon oec-text-with-icon__icon--direction-left oec-text-with-icon__icon--side-left"
        >
          arrowRight.svg
        </svg>
        Back
      </span>
    </button>
    <h1>
      Request site and funding changes
    </h1>
    <p>
      The ECE Reporter team will review any requested updates made in this form. Any updates or follow-up questions will be sent to the email associated with your ECE Reporter account.
    </p>
    <h2>
      Managed sites
    </h2>
    <div
      class="grid-row grid-gap margin-bottom-1"
    >
      <div
        class="tablet:grid-col-4 text-bold"
      >
        Site name
      </div>
      <div
        class="tablet:grid-col-3 text-bold"
      >
        Request updated name
      </div>
      <div
        class="tablet:grid-col-3 text-bold"
      >
        Request removal from your account
      </div>
    </div>
    <div
      class="grid-row grid-gap margin-bottom-1"
    >
      <div
        class="tablet:grid-col-4"
      >
        <p>
          Students of Salazaar
        </p>
        <p
          class="usa-hint"
        >
          <b>
            License #: 
          </b>
            Exempt  
          <b>
            NAEYC ID: 
          </b>
            None  
          <b>
            Registry ID: 
          </b>
            None 
        </p>
      </div>
      <div
        class="tablet:grid-col-3 display-flex flex-align-center"
      >
        <div
          class=" usa-form-group"
        >
          <label
            class="usa-label"
            for="Students of Salazaar-rename"
          >
             
          </label>
          <input
            aria-required="true"
            class="usa-input oec-text-input"
            id="Students of Salazaar-rename"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="tablet:grid-col-3 display-flex flex-align-center"
      >
        <div
          class="usa-checkbox"
        >
          <input
            class="usa-checkbox__input"
            id="Students of Salazaar-remove-checkbox"
            type="checkbox"
            value=""
          />
          <label
            class="usa-checkbox__label"
            for="Students of Salazaar-remove-checkbox"
          />
        </div>
      </div>
    </div>
    <div
      class="tablet:grid-col-10 margin-top-1 margin-bottom-1"
    >
      <hr
        class="MuiDivider-root"
      />
    </div>
    <div
      class="grid-row grid-gap margin-bottom-1"
    >
      <div
        class="tablet:grid-col-4"
      >
        <p>
          Karkaroff Kids
        </p>
        <p
          class="usa-hint"
        >
          <b>
            License #: 
          </b>
            Exempt  
          <b>
            NAEYC ID: 
          </b>
            None  
          <b>
            Registry ID: 
          </b>
            None 
        </p>
      </div>
      <div
        class="tablet:grid-col-3 display-flex flex-align-center"
      >
        <div
          class=" usa-form-group"
        >
          <label
            class="usa-label"
            for="Karkaroff Kids-rename"
          >
             
          </label>
          <input
            aria-required="true"
            class="usa-input oec-text-input"
            id="Karkaroff Kids-rename"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="tablet:grid-col-3 display-flex flex-align-center"
      >
        <div
          class="usa-checkbox"
        >
          <input
            class="usa-checkbox__input"
            id="Karkaroff Kids-remove-checkbox"
            type="checkbox"
            value=""
          />
          <label
            class="usa-checkbox__label"
            for="Karkaroff Kids-remove-checkbox"
          />
        </div>
      </div>
    </div>
    <div
      class="tablet:grid-col-10 margin-top-1 margin-bottom-1"
    >
      <hr
        class="MuiDivider-root"
      />
    </div>
    <div
      class="grid-row grid-gap margin-bottom-1"
    >
      <div
        class="tablet:grid-col-4"
      >
        <p>
          Nocturn Alley Nargles
        </p>
        <p
          class="usa-hint"
        >
          <b>
            License #: 
          </b>
            Exempt  
          <b>
            NAEYC ID: 
          </b>
            None  
          <b>
            Registry ID: 
          </b>
            None 
        </p>
      </div>
      <div
        class="tablet:grid-col-3 display-flex flex-align-center"
      >
        <div
          class=" usa-form-group"
        >
          <label
            class="usa-label"
            for="Nocturn Alley Nargles-rename"
          >
             
          </label>
          <input
            aria-required="true"
            class="usa-input oec-text-input"
            id="Nocturn Alley Nargles-rename"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="tablet:grid-col-3 display-flex flex-align-center"
      >
        <div
          class="usa-checkbox"
        >
          <input
            class="usa-checkbox__input"
            id="Nocturn Alley Nargles-remove-checkbox"
            type="checkbox"
            value=""
          />
          <label
            class="usa-checkbox__label"
            for="Nocturn Alley Nargles-remove-checkbox"
          />
        </div>
      </div>
    </div>
    <div
      class="tablet:grid-col-10 margin-top-1 margin-bottom-1"
    >
      <hr
        class="MuiDivider-root"
      />
    </div>
    <div
      class="tablet:grid-col-6"
    >
      <h2>
        Request a new site
      </h2>
      <p
        class="usa-hint"
      >
        Fill out this section if your program manages a site not included in your ECE Reporter account.
      </p>
      <button
        class="usa-button"
        type="button"
      >
        Add New Site
      </button>
    </div>
    <div
      class="tablet:grid-col-6 margin-top-4 margin-bottom-4"
    >
      <hr
        class="MuiDivider-root"
      />
    </div>
    <div
      class="tablet:grid-col-6"
    >
      <h2>
        Funding space types
      </h2>
      <p
        class="usa-hint"
      >
        Request corrections to the funding types received by your program in the section below.
      </p>
    </div>
    <div
      class="grid-row grid-gap margin-top-2 margin-bottom-2"
    >
      <a
        class="usa-button usa-button--outline"
        href="/home"
      >
        Cancel
      </a>
      <button
        class="usa-button"
        type="button"
      >
        Send request
      </button>
    </div>
  </div>
</DocumentFragment>
`;
